--- a/.config/hypr/env.conf
+++ b/.config/hypr/env.conf
@@ -1,18 +1,34 @@
-#XDG
+env = EDITOR,nvim #default editor
+
+# xdg Specifications
 env = XDG_CURRENT_DESKTOP,Hyprland
-env = XDG_SESSION_TYPE,wayland
 env = XDG_SESSION_DESKTOP,Hyprland
+env = XDG_SESSION_TYPE,wayland
 
-#QT
+# QT Variables
 env = QT_AUTO_SCREEN_SCALE_FACTOR,1
-env = QT_QPA_PLATFORM,wayland
 env = QT_WAYLAND_DISABLE_WINDOWDECORATION,1
-env = QT_QPA_PLATFORMTHEME, qt6ct
-env = QT_STYLE_OVERRIDE, kvantum-dark
+env = QT_QPA_PLATFORMTHEME,qt5ct 
+env = QT_QPA_PLATFORMTHEME,qt6ct
 
-#Cursor
+# hyprland-qt-support
+env = QT_QUICK_CONTROLS_STYLE,org.hyprland.style#Cursor
 env = HYPRCURSOR_THEME,Adwaita
 env = HYPRCURSOR_SIZE,24
 
 env = XCURSOR_THEME,Adwaita
 env = XCURSOR_SIZE,24
+
+# firefox
+env = MOZ_ENABLE_WAYLAND,1
+
+# electron >28 apps (may help) ##
+# https://www.electronjs.org/docs/latest/api/environment-variables
+env = ELECTRON_OZONE_PLATFORM_HINT,auto # auto selects Wayland if possible, X11 otherwise
+
+#### Aquamarine Environment Variables #### ( Hyprland > 0.45 )
+# https://wiki.hyprland.org/Configuring/Environment-variables/#aquamarine-environment-variables----ref-httpsgithubcomhyprwmaquamarineblobmaindocsenvmd---
+# env = AQ_TRACE,1 # Enables more verbose logging.
+# env = AQ_DRM_DEVICES,/dev/dri/card1:/dev/dri/card0 # Set an explicit list of DRM devices (GPUs) to use. It’s a colon-separated list of paths, with the first being the primary. E.g. /dev/dri/card1:/dev/dri/card0
+# env = AQ_MGPU_NO_EXPLICIT,1 # Disables explicit syncing on mgpu buffers
+# env = AQ_NO_MODIFIERS,1 # Disables modifiers for DRM buffers
