Updating windowrules.conf
Standart cleanup and managing my stuff, borrow setting from my friend
JKTech

--- a/.config/hypr/windowrules.conf
+++ b/.config/hypr/windowrules.conf
@@ -14,8 +14,7 @@ windowrulev2 = float, initialTitle:^(.*)(- Nextcloud)$, class:^(Brave-browser)$
 windowrulev2 = center, initialTitle:^(.*)(- Nextcloud)$, class:^(Brave-browser)$
 
 # Nextcloud PWA
-windowrulev2 = float, initialTitle: Files - Nextcloud
-windowrulev2 = center, initialTitle: Files - Nextcloud
+windowrulev2 = float, initialTitle: Files - Nextcloud windowrulev2 = center, initialTitle: Files - Nextcloud
 windowrulev2 = size 1600 860, initialTitle: Files - Nextcloud
 
 # Vesktop
@@ -149,3 +148,16 @@ windowrule = center, rpi-imager
 # Anydesk
 windowrule = center, Anydesk
 windowrule = float, Anydesk
+
+windowrulev2 = tag +settings, title:(Kvantum Manager)
+windowrulev2 = tag +settings, class:^(nm-applet|nm-connection-editor|blueman-manager)$
+windowrulev2 = tag +settings, class:^(pavucontrol|org.pulseaudio.pavucontrol|com.saivert.pwvucontrol)$
+windowrulev2 = tag +settings, class:^(qt5ct|qt6ct|[Yy]ad)$
+windowrulev2 = tag +settings, class:(xdg-desktop-portal-gtk)
+windowrulev2 = tag +settings, class:^(org.kde.polkit-kde-authentication-agent-1)$
+
+# windowrule v2 to avoid idle for fullscreen apps
+windowrulev2 = idleinhibit fullscreen, fullscreen:1
+
+# FLOAT
+windowrulev2 = float, title:^(Picture-in-Picture)$
