Another autostart.conf update
Minor update

--- a/.config/hypr/autostart.conf
+++ b/.config/hypr/autostart.conf
@@ -1,4 +1,6 @@
+# Startup
 exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
+exec-once = systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 
 exec-once = hyprpaper # wallpaper but for factional scaling
 exec-once = hypridle
@@ -6,6 +8,12 @@ exec-once = hypridle
 exec-once = waybar # Status bar
 exec-once = dunst # notification
 exec-once = systemctl --user start hyprpolkitagent
+
+# starup apps
+exec-once = waybar &
+exec-once = nm-applet --indicator &
+exec-once = swaync &
+exec-once = blueman-applet & 
 
 #Clipboard manager
 exec-once = wl-paste --type text --watch cliphist store #Stores only text data
