--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -11,6 +11,7 @@ source = ~/.config/hypr/env.conf
 
 # Execute your favorite apps at launch
 source = ~/.config/hypr/autostart.conf
+source = ~/.config/hypr/polkit.conf
 
 # Source a file (multi-file configs)
 #! Don't remove line bellow, its used for linking in install script
