--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -1,17 +1,15 @@
 #See https://wiki.hyprland.org/Configuring/Environment-variables/ for more
-
 # Some default env vars.
 source = ~/.config/hypr/env.conf
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
-# monitor=,preferred,auto,auto # Default config
-
+# monitor=eDP-1,1920x1080@144, 0x0, 1
+source = ~/.config/hypr/monitors.conf
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 
 # Execute your favorite apps at launch
 source = ~/.config/hypr/autostart.conf
-source = ~/.config/hypr/polkit.conf
 
 # Source a file (multi-file configs)
 #! Don't remove line bellow, its used for linking in install script
@@ -22,11 +20,10 @@ input {
     kb_layout = us,cz(qwerty)
     kb_variant =
     kb_model =
-    kb_options = grp:alt_shift_toggle
+    kb_options = grp:win_space_toggle
     kb_rules =
 
     follow_mouse = 1
-
     numlock_by_default = true
 
     touchpad {
@@ -49,7 +46,6 @@ general {
 
     layout = master
 
-    # Please see https://wiki.hyprland.org/Configuring/Tearing/ before you turn this on
     # allow_tearing = false
 }
 
@@ -87,18 +83,11 @@ animations {
     animation = workspaces, 1, 6, default
 }
 
-dwindle {
-    # See https://wiki.hyprland.org/Configuring/Dwindle-Layout/ for more
-    pseudotile = true # master switch for pseudotiling. Enabling is bound to mainMod + P in the keybinds section below
-    preserve_split = true # you probably want this
-}
-
 master {
     # See https://wiki.hyprland.org/Configuring/Master-Layout/ for more
     # new_is_master = true
     #no_gaps_when_only = 1
     new_status = master
-    orientation = center
 }
 
 gestures {
@@ -178,11 +167,16 @@ bind = , XF86audiostop, exec, playerctl stop
 # ###################
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
-bind = $mainMod, SHIFT, Q, exec, killactive
-bind = $mainMod, SHIFT, E, exit,
-bind = $mainMod, E, exec, nautilus
+bind = $mainMod SHIFT, Q, killactive
+bind = $mainMod, RETURN, exec, kitty
+bind = $mainMod SHIFT, E, exit,
+bind = SUPER, E, exec, nautilus
 bind = $mainMod, V, togglefloating,
 bind = $mainMod, D, exec, wofi --show drun
+bind = $mainMod SHIFT, RETURN, layoutmsg, swapwithmaster master
+bind = $mainMod SHIFT, J, layoutmsg, cyclenext loop
+bind = $mainMod SHIFT, K, layoutmsg, cyclenext loop
+
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
