--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,5 +1,12 @@
 # vim:ft=kitty
 
+font_family      FantasqueSansM Nerd Font
+bold_font        auto
+italic_font      auto
+bold_italic_font auto
+
+font_size 13
+
 # The basic colors
 foreground              #cad3f5
 background              #24273a
