commit berfore reinstall

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -30,7 +30,7 @@ input {
         natural_scroll = false
     }
 
-    sensitivity = 0.4 # -1.0 - 1.0, 0 means no modification.
+    sensitivity = 0.5 # -1.0 - 1.0, 0 means no modification.
     accel_profile = flat
 }
 
@@ -45,8 +45,7 @@ general {
     col.inactive_border = rgba(595959aa)
 
     layout = master
-
-    # allow_tearing = false
+    #allow_tearing = false
 }
 
 decoration {
@@ -117,14 +116,14 @@ $mainMod = ALT
 
 # Screenshot
 #bind = $mainMod, Print, exec, grim -g "$(slurp)"
-bind = $mainMod, Print, exec, grimblast --freeze copy area edit
-bind = , Print, exec, grimblast --freeze copy screen
+bind = SUPER SHIFT, S, exec, grimblast --freeze copy area edit
+#bind = , Print, exec, grimblast --freeze copy screen
 
 # Edited binds
-#bind = $mainMod, F, togglefloating,
+bind = $mainMod, F, fullscreen,
 
 # Power menu
-#bind = $mainMod, L, exec, hyprlock --quiet
+bind = SUPER, L, exec, hyprlock --quiet
 
 # Brightness
 bind = , XF86MonBrightnessDown, exec, brightnessctl set 5%-
