--- a/.config/hypr/hyprpaper.conf
+++ b/.config/hypr/hyprpaper.conf
@@ -1,5 +1,5 @@
 # Hide splash message on bottom
 splash = false
 
-# preload = /usr/share/backgrounds/wallpaper.jpg
-# wallpaper = ,/usr/share/backgrounds/wallpaper.jpg
+ preload = /usr/share/backgrounds/wallpaper.jpg
+ wallpaper = /usr/share/backgrounds/wallpaper.jpg
