--- a/.config/gtk-3.0/settings.ini
+++ b/.config/gtk-3.0/settings.ini
@@ -1,8 +1,8 @@
 [Settings]
 gtk-theme-name=Catppuccin-Dark
-gtk-icon-theme-name=Tela-dark
-gtk-font-name=Noto Sans,  10
-gtk-cursor-theme-name=breeze_cursors
+gtk-icon-theme-name=Tela
+gtk-font-name=Cantarell 11
+gtk-cursor-theme-name=Adwaita
 gtk-cursor-theme-size=24
 gtk-toolbar-style=3
 gtk-toolbar-icon-size=GTK_ICON_SIZE_LARGE_TOOLBAR
@@ -14,7 +14,7 @@ gtk-xft-antialias=1
 gtk-xft-hinting=1
 gtk-xft-hintstyle=hintslight
 gtk-xft-rgba=rgb
-gtk-application-prefer-dark-theme=1
+gtk-application-prefer-dark-theme=0
 gtk-decoration-layout=icon:minimize,maximize,close
 gtk-enable-animations=true
 gtk-modules=colorreload-gtk-module:window-decorations-gtk-module
