--- a/.config/hypr/hyprpaper.conf
+++ b/.config/hypr/hyprpaper.conf
@@ -1,5 +1,6 @@
 # Hide splash message on bottom
 splash = false
 
- preload = /usr/share/backgrounds/wallpaper.jpg
- wallpaper = /usr/share/backgrounds/wallpaper.jpg
+ preload = ~/.config/hypr/wallpaper.png
+ wallpaper = eDP-1, ~/.config/hypr/wallpaper.png
+ wallpaper= HDMI-A-1, ~/.config/hypr/wallpaper.png
