--- a/.config/waybar/config
+++ b/.config/waybar/config
@@ -100,7 +100,7 @@
 		"interval": 1,
 		"format": " {:%d.%m.%Y | %H:%M:%S}  ",
 		"tooltip-format": "<tt><small>{calendar}</small></tt>",
-        "timezones": "Europe/Prague"
+        "timezones": "Europe/Prague",
 		"calendar": {
 			"mode"          : "year",
 			"weeks-pos"     : "right",
