--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,5 +1,7 @@
 # vim:ft=kitty
 
+confirm_os_window_close 0
+
 font_family      FantasqueSansM Nerd Font
 bold_font        auto
 italic_font      auto
