Update ruznych souboru a neovim

--- a/.config/hypr/windowrules.conf
+++ b/.config/hypr/windowrules.conf
@@ -1,46 +1,59 @@
+
 # Auth window
-windowrule = float, polkit-kde-authentication-agent-1
-windowrule = center, polkit-kde-authentication-agent-1
+windowrule = float, class:hyprpolkitagent
+windowrule = center, class:hyprpolkitagent
 
 # Brave PWA
-windowrulev2 = opacity 1 override 0.8 override, initialTitle:^(Home Assistant), class:^(Brave-browser)$
-windowrulev2 = size 1400 850, initialTitle:^(Home Assistant), class:^(Brave-browser)$
-windowrulev2 = float, initialTitle:^(Home Assistant), class:^(Brave-browser)$
-windowrulev2 = center, initialTitle:^(Home Assistant), class:^(Brave-browser)$
+windowrule = opacity 1 override 0.8 override, initialTitle:^(Home Assistant), class:^(brave-)(.*)(-Default)$
+windowrule = size 1400 850, initialTitle:^(Home Assistant), class:^(brave-)(.*)(-Default)$
+windowrule = float, initialTitle:^(Home Assistant), class:^(brave-)(.*)(-Default)$
+windowrule = center, initialTitle:^(Home Assistant), class:^(brave-)(.*)(-Default)$
 
 # windowrulev2 = opacity 1 override 0.8 override, initialTitle:^(.*)(- Nextcloud)$, class:^(Brave-browser)$
-windowrulev2 = size 1400 850, initialTitle:^(.*)(- Nextcloud)$, class:^(Brave-browser)$
-windowrulev2 = float, initialTitle:^(.*)(- Nextcloud)$, class:^(Brave-browser)$
-windowrulev2 = center, initialTitle:^(.*)(- Nextcloud)$, class:^(Brave-browser)$
+windowrule = size 1400 850, initialTitle:^(.*)(- Nextcloud)$, class:^(brave-)(.*)(-Default)$
+windowrule = float, initialTitle:^(.*)(- Nextcloud)$, class:^(brave-)(.*)(-Default)$
+windowrule = center, initialTitle:^(.*)(- Nextcloud)$, class:^(brave-)(.*)(-Default)$
 
 # Nextcloud PWA
-windowrulev2 = float, initialTitle: Files - Nextcloud windowrulev2 = center, initialTitle: Files - Nextcloud
-windowrulev2 = size 1600 860, initialTitle: Files - Nextcloud
-
-# Vesktop
-windowrule = opacity 1 override 0.8 override, vesktop
+windowrule = float, initialTitle: Files - Nextcloud
+windowrule = center, initialTitle: Files - Nextcloud
+windowrule = size 1600 860, initialTitle: Files - Nextcloud
 
 # Cooler Control
-windowrule = float, coolercontrol
+windowrule = float, class:org.coolercontrol.CoolerControl
 
 # Spotify
 windowrule = float, title:^(Downloading spotify)$ #Spotify Download window
 windowrule = size 400 125, title:^(Downloading spotify)$
 
 # Calculator
-windowrule = float, org.gnome.Calculator
-windowrule = size 360 495, org.gnome.Calculator
+windowrule = float, class:org.gnome.Calculator
+windowrule = size 360 495, class:org.gnome.Calculator
 
 # Steam
-windowrule = float, title:^(Friends List)$ # steam friend list
-windowrule = float, title:^(Steam Settings)$ # steam settings
-windowrule = float, title:^(Special Offers)$ # Special offers
-windowrule = center, title:^(Special Offers)$ # Special offers
-windowrulev2 = center, title:$^(Steam),class:^()$
+windowrule = float, title:^(Friends List)$, class:^(steam)$ # steam friend list
+windowrule = center, title:^(Friends List)$, class:^(steam)$ # steam friend list
+
+windowrule = float, title:^(Special Offers)$, class:^(steam)$ # Special offers
+windowrule = center, title:^(Special Offers)$, class:^(steam)$ # Special offers
+
+windowrule = center, initialTitle:^(Steam Settings)$, class:^(steam)$ # Steam settings
+windowrule = float, initialTitle:^(Steam Settings)$, class:^(steam)$ # Steam settings
+
+windowrule = center, initialTitle:^(Players)$, class:^(steam)$ # Players
+windowrule = float, initialTitle:^(Players)$, class:^(steam)$ # Players
+
+windowrule = center, initialTitle:^(Game Servers)$, class:^(steam)$ # Game Servers
+windowrule = float, initialTitle:^(Game Servers)$, class:^(steam)$ # Game Servers
+
+windowrule = center, initialTitle:^(Add Non-Steam Game)$, class:^(steam)$ # Add Non-Steam Game
+windowrule = float, initialTitle:^(Add Non-Steam Game)$, class:^(steam)$ # Add Non-Steam Game
+
+windowrule = center, title:$^(Steam),class:^()$
 
 # Games
-windowrule = fullscreen, cs2
-# windowrule = fullscreen,^(steam_app_)(.*)$
+windowrule = fullscreen, class:^(cs2)$
+windowrule = fullscreen,class:^steam_app\d+$
 
 # Picture in picture
 windowrule = float, title:^(Picture in picture)$
@@ -49,115 +62,108 @@ windowrule = size 640 360, title:^(Picture in picture)$
 windowrule = move 100%-650 100%-370, title:^(Picture in picture)$
 
 # Kitty
-windowrule = opacity 0.7 override 0.7 override,^(kitty)$
+windowrule = opacity 0.7 override 0.7 override, class:^(kitty)$
+windowrule = opacity 1 override 1 override, class:^(kitty)$,title:^(nvim)$
+
 
 # Nextcloud
-windowrule = float, nextcloud
-windowrule = move 100%-450 47, Nextcloud
-windowrule = size 400 400, Nextcloud
-windowrule = noborder, Nextcloud
-windowrule = noblur, Nextcloud
+windowrule = float, class:^(.*)(nextcloud)$
+windowrule = move 100%-850 47, class:^(.*)(nextcloud)$
+windowrule = size 400 400, class:^(.*)(nextcloud)$
+windowrule = noborder, class:^(.*)(nextcloud)$
+windowrule = noblur, class:^(.*)(nextcloud)$
 
 # Volume control
-windowrule = float, org.pulseaudio.pavucontrol
-windowrule = move 100%-710 50, org.pulseaudio.pavucontrol
-windowrule = size 700 400, org.pulseaudio.pavucontrol
+windowrule = float, class:org.pulseaudio.pavucontrol
+windowrule = move 100%-710 50, class:org.pulseaudio.pavucontrol
+windowrule = size 700 400, class:org.pulseaudio.pavucontrol
 
 # Virtual machine manager
-windowrule = float, virt-manager
+windowrule = float, class:virt-manager
 
 # VLC
-windowrule = noblur, vlc
+windowrule = noblur, class:vlc
 
 # Bitwarden
-windowrule = float, Bitwarden
-windowrule = opacity 0.9, Bitwarden
+windowrule = float, class:Bitwarden
+windowrule = opacity 0.9, class:Bitwarden
 
 # Kvantum manager
-windowrule = float, kvantummanager
-windowrule = center, kvantummanager
+windowrule = float, class:kvantummanager
+windowrule = center, class:kvantummanager
 
 # QT6CT
-windowrule = float, qt6ct
-windowrule = size 800 500, qt6ct
+windowrule = float, class:qt6ct
+windowrule = size 800 500, class:qt6ct
 
 # NWG-look
-windowrule = float, nwg-look
+windowrule = float, class:nwg-look
+windowrule = float, class:nwg-displays
 
 # Kwallet
-windowrule = float, kwalletmanager5
-
-# Warp terminal
-windowrule = tile, warp
+windowrule = float, class:kwalletmanager5
 
 # Wofi
-windowrule = noborder, wofi
+windowrule = noborder, class:wofi
 
 # Blueman
-windowrule = float, blueman-manager
+windowrule = float, class:blueman-manager
 
 # Firewall
-windowrule = float, firewall-config
-windowrule = center, firewall-config
+windowrule = float, class:firewall-config
+windowrule = center, class:firewall-config
 
 # Network
-windowrule = float, nm-connection-editor
-windowrule = center, nm-connection-editor
+windowrule = float, class:nm-connection-editor
+windowrule = center, class:nm-connection-editor
 
 # Hyprland share picker
-windowrule = float, hyprland-share-picker
-windowrule = pin, hyprland-share-picker
-windowrule = center, hyprland-share-picker
+windowrule = float, class:hyprland-share-picker
+windowrule = pin, class:hyprland-share-picker
+windowrule = center, class:hyprland-share-picker
 
 # Libre office
-windowrulev2 = float, initialTitle:LibreOffice
-windowrulev2 = center, initialTitle:LibreOffice
+windowrule = float, initialTitle:LibreOffice
+windowrule = center, initialTitle:LibreOffice
 
 #Empty class and title windows (Context menu)
-windowrulev2=noblur,class:^()$,title:^()$
+windowrule=noblur,class:^()$,title:^()$
 
 # Layer rules
 layerrule = blur, notifications
-layerrule = blur, rofi
+layerrule = blur, wofi
 layerrule = ignorezero, notifications
 
+# Raspberry imager
+windowrule = float, class:rpi-imager
+windowrule = center, class:rpi-imager 
+
 # Thunderbird
-windowrulev2 = float, class:^(thunderbird)$,title:^(Write)(.*)$
-windowrulev2 = float, class:^(thunderbird)$,initialTitle:^()$
-windowrulev2 = float, class:^(thunderbird)$,initialTitle:^(Calendar Reminders)$
-windowrulev2 = float, class:^(thunderbird)$,initialTitle:^(Edit Item)$
-windowrulev2 = float, class:^(thunderbird)$,initialTitle:^(Create New Calendar)$
-windowrulev2 = size 500 381, class:^(thunderbird)$,initialTitle:^(Create New Calendar)$
+windowrule = float, class:^(thunderbird)$,title:^(Write)(.*)$
+windowrule = float, class:^(thunderbird)$,initialTitle:^()$
+windowrule = float, class:^(thunderbird)$,initialTitle:^(Calendar Reminders)$
+windowrule = float, class:^(thunderbird)$,initialTitle:^(Edit Item)$
+windowrule = float, class:^(thunderbird)$,initialTitle:^(Create New Calendar)$
+windowrule = size 500 381, class:^(thunderbird)$,initialTitle:^(Create New Calendar)$
 
 # Winbox
-windowrule = float, WinBox
-windowrule = size 1350 750, WinBox
+windowrule = float, class:WinBox
+windowrule = size 1350 750, class:WinBox
 
 # Open Folder picker
-windowrulev2 = center, title:^(Open Folder)$
-windowrulev2 = center, title:^(Open File)$
-windowrulev2 = center, title:^(Open Files)$
+windowrule = center, title:^(Open Folder)$
+windowrule = center, title:^(Open File)$
+windowrule = center, title:^(Open Files)$
+windowrule = center, initialTitle:^(.*)( wants to save)$, class:^(brave)$
+windowrule = float, initialTitle:^(.*)( wants to save)$, class:^(brave)$
+
+windowrule = center, initialTitle:^(.*)( wants to open)$, class:^(brave)$
+windowrule = float, initialTitle:^(.*)( wants to open)$, class:^(brave)$
 
 # VS Code
-windowrulev2 = center, class:^(Code)$
+windowrule = center, class:^(Code)$
 
-# Raspberry imager
-windowrule = float, rpi-imager
-windowrule = center, rpi-imager
+# Bruno
+windowrule = center, class:bruno
+windowrule = float, class:bruno
 
-# Anydesk
-windowrule = center, Anydesk
-windowrule = float, Anydesk
-
-windowrulev2 = tag +settings, title:(Kvantum Manager)
-windowrulev2 = tag +settings, class:^(nm-applet|nm-connection-editor|blueman-manager)$
-windowrulev2 = tag +settings, class:^(pavucontrol|org.pulseaudio.pavucontrol|com.saivert.pwvucontrol)$
-windowrulev2 = tag +settings, class:^(qt5ct|qt6ct|[Yy]ad)$
-windowrulev2 = tag +settings, class:(xdg-desktop-portal-gtk)
-windowrulev2 = tag +settings, class:^(org.kde.polkit-kde-authentication-agent-1)$
-
-# windowrule v2 to avoid idle for fullscreen apps
-windowrulev2 = idleinhibit fullscreen, fullscreen:1
-
-# FLOAT
-windowrulev2 = float, title:^(Picture-in-Picture)$
