Fix many things

--- a/.config/gamemode.ini
+++ b/.config/gamemode.ini
@@ -112,8 +112,7 @@ disable_splitlock=1
 start=notify-send "GameMode started"
     ~/.config/hypr/gamemode.sh
 
-end=notify-send "GameMode ended"
-    ~/.config/hypr/gamemode.sh
+end=~/.config/hypr/gamemode.sh
 
 ; Timeout for scripts (seconds). Scripts will be killed if they do not complete within this time.
 ;script_timeout=10
