--- a/.config/waybar/config.jsonc
+++ b/.config/waybar/config.jsonc
@@ -119,7 +119,8 @@
             "warning": 30,
             "critical": 15
         },
-        "format": "{capacity}% {icon}",
+        "format": "{icon} {capacity}%",
+        "format-full": " 󱟢 {capacity}%",
         "format-icons": {
             "discharging": [
                 "󰁺",
