--- a/.config/hypr/env.conf
+++ b/.config/hypr/env.conf
@@ -10,8 +10,8 @@ env = AQ_DRM_DEVICES,/dev/dri/card1:/dev/dri/card0
 # QT Variables
 env = QT_AUTO_SCREEN_SCALE_FACTOR,1
 env = QT_WAYLAND_DISABLE_WINDOWDECORATION,1
-env = QT_QPA_PLATFORMTHEME,qt5ct 
 env = QT_QPA_PLATFORMTHEME,qt6ct
+env = QT_STYLE_OVERRIDE, kvantum-dark
 
 # hyprland-qt-support
 env = QT_QUICK_CONTROLS_STYLE,org.hyprland.style#Cursor
