--- a/.config/hypr/windowrules.conf
+++ b/.config/hypr/windowrules.conf
@@ -167,3 +167,5 @@ windowrule = center, class:^(Code)$
 windowrule = center, class:bruno
 windowrule = float, class:bruno
 
+# Workspaces
+windowrule = workspace 2 silent, class:discord
