--- a/.config/starship.toml
+++ b/.config/starship.toml
@@ -2,16 +2,16 @@ format = '''
 \[$username$hostname\]\[$directory\]$git_branch$git_status$character$container$nodejs$buf$bun$c$cmake$dart$deno$elixir$golang$java$kotlin$kubernetes$lua$php$python
 '''
 
-# Essencial stuff
+# Essential stuff
 [hostname]
 ssh_only = false
-format = '[$ssh_symbol](bold blue)@[$hostname](bold red)'
+format = '[$ssh_symbol](#7dc4e4 bold)@[$hostname](#c6a0f6 bold)'
 trim_at = '.companyname.com'
 disabled = false
 
 [username]
-style_user = 'white bold'
-style_root = 'red bold'
+style_user = '#b7bdf8 bold'
+style_root = '#ed8796 bold'
 format = '[$user]($style)'
 disabled = false
 show_always = true
@@ -19,7 +19,7 @@ show_always = true
 [directory]
 truncation_length = 4
 truncation_symbol = '../'
-format = '[$path]($style)[$read_only]($read_only_style)'
+format = '[$path](#8aadf4 bold)[$read_only](#ed8796 bold)'
 read_only = '🔒'
 home_symbol = '~'
 use_os_path_sep = true
@@ -28,72 +28,73 @@ use_os_path_sep = true
 symbol = ''
 truncation_length = 4
 truncation_symbol = ''
-format = '\[[$symbol $branch(:$remote_branch)]($style)\]'
+format = '\[[$symbol $branch(:$remote_branch)](#f5bde6 bold)\]'
 
 [git_status]
 ahead = '${count}'
 diverged = '${ahead_count}${behind_count}'
 behind = '${count}'
+style = '#f5a97f bold'
 
 [character]
-error_symbol = '[✗](bold red) '
-success_symbol = ''
+error_symbol = '[✗](#ed8796 bold) '
+success_symbol = '[❯](#a6da95 bold)'
 
 # Info stuff
 [container]
-format = '\[[$symbol \[$name\]]\]($style)'
+format = '\[[$symbol \[$name\]]](#f0c6c6 bold)'
 
 [nodejs]
-format = '\[[ $version](bold green)\]'
-not_capable_style = 'bold red'
+format = '\[[ $version](#8bd5ca bold)\] '
+not_capable_style = '#ed8796 bold'
 
 [buf]
 symbol = '🦬 '
-format = '\[[$symbol($version)]($style)\]'
+format = '\[[$symbol($version)](#eed49f bold)\] '
 
 [bun]
-format = '\[[ $version](bold green)\]'
+format = '\[[ $version](#8aadf4 bold)\] '
 
 [c]
-format = '\[[$name ($version)]($style)\]'
+format = '\[[$name ($version)](#7dc4e4 bold)\] '
 
 [cmake]
-format = '\[[$symbol($version)]($style)\]'
+format = '\[[$symbol($version)](#8aadf4 bold)\] '
 symbol = ''
 
 [dart]
-format = '\[[ $version](bold red)\]'
+format = '\[[ $version](#f5a97f bold)\] '
 
 [deno]
-format = '\[[ $version](green bold)\]'
+format = '\[[ $version](#a6da95 bold)\] '
 
 [elixir]
-format = '\[[$symbol($version \(OTP $otp_version\))]($style)\]'
+format = '\[[$symbol($version \(OTP $otp_version\))](#c6a0f6 bold)\] '
 symbol = ' '
 
 [golang]
-format = '\[[ ($version)($mod_version)](bold cyan)\]'
+format = '\[[ ($version)($mod_version)](#7dc4e4 bold)\] '
 
 [java]
-format = '\[[${symbol}(${version} )]($style)\]'
+format = '\[[${symbol}(${version} )](#f5bde6 bold)\] '
 symbol = ''
 
 [kotlin]
 symbol = ''
-format = '\[[$symbol($version)]($style)\]'
+format = '\[[$symbol($version)](#f0c6c6 bold)\] '
 
 [kubernetes]
-format = '\[[ ($user on )($cluster in )$context \($namespace\)](dimmed green)\]'
+format = '\[[ ($user on )($cluster in )$context \($namespace\)](#a6da95 dimmed)\] '
 disabled = false
 
 [lua]
-format = '\[[ $version](bold blue)\]'
+format = '\[[ $version](#91d7e3 bold)\] '
 
 [php]
-format = '\[[ $version](147 bold)\]'
+format = '\[[ $version](#b7bdf8 bold)\] '
 
 [python]
-format = '\[[${symbol}${pyenv_prefix}(${version})(\($virtualenv\))]($style)\]'
+format = '\[[${symbol}${pyenv_prefix}(${version})(\($virtualenv\))](#f5bde6 bold)\] '
 symbol = ''
 
 [palettes.catppuccin_macchiato]
@@ -106,9 +107,9 @@ maroon = "#ee99a0"
 peach = "#f5a97f"
 yellow = "#eed49f"
 green = "#a6da95"
-teal = "#8bd5ca"
-sky = "#91d7e3"
-sapphire = "#7dc4e4"
+teal = "#8bd5ca" 
+sky = "#91d7e3" 
+sapphire = "#7dc4e4" 
 blue = "#8aadf4"
 lavender = "#b7bdf8"
 text = "#cad3f5"
