--- a/.config/hypr/hyprpaper.conf
+++ b/.config/hypr/hyprpaper.conf
@@ -1,6 +1,6 @@
 # Hide splash message on bottom
 splash = false
 
- preload = ~/.config/hypr/wallpaper.png
- wallpaper = eDP-1, ~/.config/hypr/wallpaper.png
- wallpaper= HDMI-A-1, ~/.config/hypr/wallpaper.png
+ preload = ~/.config/hypr/wallpaper.jpg
+ wallpaper = eDP-1, ~/.config/hypr/wallpaper.jpg
+ wallpaper= HDMI-A-1, ~/.config/hypr/wallpaper.jpg
