--- a/.config/waybar/config.jsonc
+++ b/.config/waybar/config.jsonc
@@ -1,206 +1,180 @@
 {
-    "layer": "top",
-    "height": 47,
-    "reload_style_on_change": true,
-    "modules-left": [
-        "hyprland/workspaces",
-        "power-profiles-daemon",
-        "gamemode",
-        "privacy"
-    ],
-    "modules-center": [
-        "clock"
-    ],
-    "modules-right": [
-        "tray",
-        "cpu",
-        "memory",
-        "battery",
-        "pulseaudio",
-        "backlight",
-        "hyprland/language",
-    ],
-    "hyprland/workspaces": {
-        "format": "{icon}",
-        "on-click": "activate",
-        "sort-by-number": true,
-        "on-scroll-up": "hyprctl dispatch workspace e-1",
-        "on-scroll-down": "hyprctl dispatch workspace e+1",
-        "format-icons": {
-            "1": "1",
-            "2": "2",
-            "3": "3",
-            "4": "4",
-            "5": "5"
-        }
+  "layer": "top",
+  "height": 35,
+  "reload_style_on_change": true,
+  "modules-left": [
+    "hyprland/workspaces",
+    "power-profiles-daemon",
+    "gamemode",
+    "privacy",
+  ],
+  "modules-center": ["clock"],
+  "modules-right": [
+    "tray",
+    "cpu",
+    "memory",
+    "battery",
+    "pulseaudio",
+    "backlight",
+    "hyprland/language",
+    "custom/updates",
+  ],
+  "hyprland/workspaces": {
+    "format": "{icon}",
+    "on-click": "activate",
+    "sort-by-number": true,
+    "on-scroll-up": "hyprctl dispatch workspace e-1",
+    "on-scroll-down": "hyprctl dispatch workspace e+1",
+    "format-icons": {
+      "1": "1",
+      "2": "2",
+      "3": "3",
+      "4": "4",
+      "5": "5",
     },
-    "bluetooth": {
-        "format": " {status}",
-        "format-connected": " {device_alias}",
-        "format-connected-battery": " {device_alias} {device_battery_percentage}%",
-        "tooltip-format": "{controller_alias}\t{controller_address}\n\n{num_connections} connected",
-        "tooltip-format-connected": "{controller_alias}\t{controller_address}\n\n{num_connections} connected\n\n{device_enumerate}",
-        "tooltip-format-enumerate-connected": "{device_alias}\t{device_address}",
-        "tooltip-format-enumerate-connected-battery": "{device_alias}\t{device_address}\t{device_battery_percentage}%"
+  },
+  "custom/updates": {
+    "exec": "bash $HOME/.config/waybar/scripts/checkupdate.sh", // <--- path to script
+    "on-click-right": "bash $HOME/.config/waybar/scripts/checkupdates.sh", // refresh on right click
+    "interval": 900, // refresh every 15 minutes
+    "return-type": "json",
+    "format": "{icon}",
+    "format-alt": "{icon} {}",
+    "format-icons": {
+      "has-updates": "", // icon when updates needed
+      "updated": "", // icon when all packages updated
     },
-    "gamemode": {
-        "format": "{glyph}",
-        "format-alt": "{glyph} {count}",
-        "glyph": "",
-        "hide-not-running": true,
-        "use-icon": true,
-        "icon-name": "input-gaming-symbolic",
-        "icon-spacing": 4,
-        "icon-size": 20,
+  },
+  "bluetooth": {
+    "format": " {status}",
+    "format-connected": " {device_alias}",
+    "format-connected-battery": " {device_alias} {device_battery_percentage}%",
+    "tooltip-format": "{controller_alias}\t{controller_address}\n\n{num_connections} connected",
+    "tooltip-format-connected": "{controller_alias}\t{controller_address}\n\n{num_connections} connected\n\n{device_enumerate}",
+    "tooltip-format-enumerate-connected": "{device_alias}\t{device_address}",
+    "tooltip-format-enumerate-connected-battery": "{device_alias}\t{device_address}\t{device_battery_percentage}%",
+  },
+  "gamemode": {
+    "format": "{glyph}",
+    "format-alt": "{glyph} {count}",
+    "glyph": "",
+    "hide-not-running": true,
+    "use-icon": true,
+    "icon-name": "input-gaming-symbolic",
+    "icon-spacing": 4,
+    "icon-size": 20,
+    "tooltip": true,
+    "tooltip-format": "Games running: {count}",
+  },
+  "privacy": {
+    "icon-spacing": 4,
+    "icon-size": 12,
+    "transition-duration": 250,
+    "modules": [
+      {
+        "type": "screenshare",
         "tooltip": true,
-        "tooltip-format": "Games running: {count}"
-    },
-    "privacy": {
-        "icon-spacing": 4,
-        "icon-size": 12,
-        "transition-duration": 250,
-        "modules": [
-            {
-                "type": "screenshare",
-                "tooltip": true,
-                "tooltip-icon-size": 12
-            },
-            {
-                "type": "audio-in",
-                "tooltip": true,
-                "tooltip-icon-size": 12
-            }
-        ]
-    },
-    "clock": {
-        "interval": 1,
-        "format": " {:%d.%m.%Y | %H:%M:%S}  ",
-        "tooltip-format": "<tt><small>{calendar}</small></tt>",
-        "timezones": "Europe/Prague",
-        "calendar": {
-            "mode": "year",
-            "weeks-pos": "right",
-            "mode-mon-col": 3,
-            "on-scroll": 1,
-            "format": {
-                "months": "<span color='#cdd6f4'><b>{}</b></span>",
-                "days": "<span color='#89b4fa'><b>{}</b></span>",
-                "weeks": "<span color='#b4befe'><b>W{}</b></span>",
-                "weekdays": "<span color='#b4befe'><b>{}</b></span>",
-                "today": "<span color='#f38ba8'><b>{}</b></span>"
-            }
-        },
-        "actions": {
-            "on-click-right": "mode",
-            "on-click-forward": "tz_up",
-            "on-click-backward": "tz_down",
-            "on-scroll-up": "shift_up",
-            "on-scroll-down": "shift_down"
-        }
-    },
-    "tray": {
-        "icon-size": 15,
-        "spacing": 10
-    },
-    "cpu": {
-        "interval": 30,
-        "format": " {}%",
-        "max-length": 10
-    },
-    "memory": {
-        "interval": 30,
-        "format": " {}%"
-    },
-    "battery": {
-        "bat": "BAT0",
-        "interval": 60,
-        "max-length": 25,
-        "states": {
-            "warning": 30,
-            "critical": 15
-        },
-        "format": "{icon} {capacity}%",
-        "format-full": " 󱟢 {capacity}%",
-        "format-icons": {
-            "discharging": [
-                "󰁺",
-                "󰁻",
-                "󰁼",
-                "󰁽",
-                "󰁾",
-                "󰁿",
-                "󰂀",
-                "󰂁",
-                "󰂂",
-                "󰁹"
-            ],
-            "charging": [
-                "󰢜",
-                "󰂆",
-                "󰂇",
-                "󰂈",
-                "󰢝",
-                "󰂉",
-                "󰢞",
-                "󰂊",
-                "󰂋",
-                "󰂅"
-            ],
-            "plugged": "󱐥"
-        }
-    },
-    "pulseaudio": {
-        "format": "{icon} {volume}% {format_source}",
-        "format-bluetooth": "{volume}% {icon}",
-        "format-muted": "󰖁 0% {format_source}",
-        "format-icons": {
-            "headphone": "",
-            "hands-free": "󰂑",
-            "headset": "󰂑",
-            "phone": "",
-            "portable": "",
-            "car": "",
-            "default": [
-                "",
-                ""
-            ]
-        },
-        "scroll-step": 5,
-        "on-click": "pavucontrol",
-        "ignored-sinks": [
-            "Easy Effects Sink"
-        ],
-        "format-source": " {volume}%",
-        "format-source-muted": " {volume}%"
-    },
-    "backlight": {
-        "format": "{percent}% {icon}",
-        "format-icons": [
-            "",
-            "",
-            "",
-            "",
-            "",
-            "",
-            "",
-            "",
-            ""
-        ]
-    },
-    "hyprland/language": {
-        "format": "󰌌  {}",
-        "format-en": "EN",
-        "format-cs": "CZ"
-    },
-    "power-profiles-daemon": {
-        "format": "{icon}",
-        "tooltip-format": "Power profile: {profile} Driver: {driver}",
+        "tooltip-icon-size": 12,
+      },
+      {
+        "type": "audio-in",
         "tooltip": true,
-        "format-icons": {
-            "default": "",
-            "performance": "",
-            "balanced": "",
-            "power-saver": ""
-        }
-    }
+        "tooltip-icon-size": 12,
+      },
+    ],
+  },
+  "clock": {
+    "interval": 1,
+    "format": " {:%d.%m.%Y | %H:%M:%S}  ",
+    "tooltip-format": "<tt><small>{calendar}</small></tt>",
+    "timezones": "Europe/Prague",
+    "calendar": {
+      "mode": "year",
+      "weeks-pos": "right",
+      "mode-mon-col": 3,
+      "on-scroll": 1,
+      "format": {
+        "months": "<span color='#cdd6f4'><b>{}</b></span>",
+        "days": "<span color='#89b4fa'><b>{}</b></span>",
+        "weeks": "<span color='#b4befe'><b>W{}</b></span>",
+        "weekdays": "<span color='#b4befe'><b>{}</b></span>",
+        "today": "<span color='#f38ba8'><b>{}</b></span>",
+      },
+    },
+    "actions": {
+      "on-click-right": "mode",
+      "on-click-forward": "tz_up",
+      "on-click-backward": "tz_down",
+      "on-scroll-up": "shift_up",
+      "on-scroll-down": "shift_down",
+    },
+  },
+  "tray": {
+    "icon-size": 15,
+    "spacing": 10,
+  },
+  "cpu": {
+    "interval": 30,
+    "format": " {}%",
+    "max-length": 10,
+  },
+  "memory": {
+    "interval": 30,
+    "format": " {}%",
+  },
+  "battery": {
+    "bat": "BAT0",
+    "interval": 60,
+    "max-length": 25,
+    "states": {
+      "warning": 30,
+      "critical": 15,
+    },
+    "format": "{icon} {capacity}%",
+    "format-full": " 󱟢 {capacity}%",
+    "format-icons": {
+      "discharging": ["󰁺", "󰁻", "󰁼", "󰁽", "󰁾", "󰁿", "󰂀", "󰂁", "󰂂", "󰁹"],
+      "charging": ["󰢜", "󰂆", "󰂇", "󰂈", "󰢝", "󰂉", "󰢞", "󰂊", "󰂋", "󰂅"],
+      "plugged": "󱐥",
+    },
+  },
+  "pulseaudio": {
+    "format": "{icon} {volume}% {format_source}",
+    "format-bluetooth": "{volume}% {icon}",
+    "format-muted": "󰖁 0% {format_source}",
+    "format-icons": {
+      "headphone": "",
+      "hands-free": "󰂑",
+      "headset": "󰂑",
+      "phone": "",
+      "portable": "",
+      "car": "",
+      "default": ["", ""],
+    },
+    "scroll-step": 5,
+    "on-click": "pavucontrol",
+    "ignored-sinks": ["Easy Effects Sink"],
+    "format-source": " {volume}%",
+    "format-source-muted": " {volume}%",
+  },
+  "backlight": {
+    "format": "{percent}% {icon}",
+    "format-icons": ["", "", "", "", "", "", "", "", ""],
+  },
+  "hyprland/language": {
+    "format": "󰌌  {}",
+    "format-en": "EN",
+    "format-cs": "CZ",
+  },
+  "power-profiles-daemon": {
+    "format": "{icon}",
+    "tooltip-format": "Power profile: {profile} Driver: {driver}",
+    "tooltip": true,
+    "format-icons": {
+      "default": "",
+      "performance": "",
+      "balanced": "",
+      "power-saver": "",
+    },
+  },
 }
