--- a/.config/hypr/hyprlock.conf
+++ b/.config/hypr/hyprlock.conf
@@ -1,84 +1,121 @@
-general {
-    hide_cursor = false
-    grace = 0
-}
-
+# BACKGROUND
 background {
     monitor =
-    path = ~/.config/hypr/wallpaper.png
-    color = rgba(25, 20, 20, 1.0)
-    # all these options are taken from hyprland, see https://wiki.hyprland.org/Configuring/Variables/#blur for explanations
-    blur_passes = 3 # 0 disables blurring
-    blur_size = 3
-    noise = 0
-    contrast = 0.9
-    brightness = 0.6
-    vibrancy = 10
+    path = ~/.config/hypr/hyprlock.png
+    blur_passes = 3
+    contrast = 0.8916
+    brightness = 0.8172
+    vibrancy = 0.1696
     vibrancy_darkness = 0.0
 }
 
+# GENERAL
+general {
+    no_fade_in = false
+    grace = 0
+    disable_loading_bar = false
+}
+
+# Profie-Photo
+image {
+    monitor =
+    path = ~/.config/hypr/vivek.png
+    border_size = 2
+    border_color = rgba(255, 255, 255, 0)
+    size = 130
+    rounding = -1
+    rotate = 0
+    reload_time = -1
+    reload_cmd = 
+    position = 0, 40
+    halign = center
+    valign = center
+}
+
+# Day-Month-Date
+label {
+    monitor =
+    text = cmd[update:1000] echo -e "$(date +"%A, %B %d")"
+    color = rgba(216, 222, 233, 0.70)
+    font_size = 25
+    font_family = SF Pro Display Bold
+    position = 0, 350
+    halign = center
+    valign = center
+}
+
+# Time
+label {
+    monitor =
+    text = cmd[update:1000] echo "<span>$(date +"%I:%M")</span>"
+    color = rgba(216, 222, 233, 0.70)
+    font_size = 120
+    font_family = SF Pro Display Bold
+    position = 0, 250
+    halign = center
+    valign = center
+}
+
+# USER-BOX
+shape {
+    monitor =
+    size = 300, 60
+    color = rgba(255, 255, 255, .1)
+    rounding = -1
+    border_size = 0
+    border_color = rgba(253, 198, 135, 0)
+    rotate = 0
+    xray = false # if true, make a "hole" in the background (rectangle of specified size, no rotation)
+
+    position = 0, -130
+    halign = center
+    valign = center
+}
+
+# USER
+label {
+    monitor =
+    text =     $USER
+    color = rgba(216, 222, 233, 0.80)
+    outline_thickness = 2
+    dots_size = 0.2 # Scale of input-field height, 0.2 - 0.8
+    dots_spacing = 0.2 # Scale of dots' absolute size, 0.0 - 1.0
+    dots_center = true
+    font_size = 18
+    font_family = SF Pro Display Bold
+    position = 0, -130
+    halign = center
+    valign = center
+}
+
+# INPUT FIELD
 input-field {
     monitor =
-    size = 240, 60
+    size = 300, 60
     outline_thickness = 2
-    dots_size = 0.22 # Scale of input-field height, 0.2 - 0.8
-    dots_spacing = 0.30 # Scale of dots' absolute size, 0.0 - 1.0
+    dots_size = 0.2 # Scale of input-field height, 0.2 - 0.8
+    dots_spacing = 0.2 # Scale of dots' absolute size, 0.0 - 1.0
     dots_center = true
-    dots_rounding = -1 # -1 default circle, -2 follow input-field rounding
-    outer_color = rgb(192, 202, 245)
-    inner_color = rgb(21, 22, 30)
-    font_color = rgb(192, 202, 245)
+    outer_color = rgba(0, 0, 0, 0)
+    inner_color = rgba(255, 255, 255, 0.1)
+    font_color = rgb(200, 200, 200)
     fade_on_empty = false
-    fade_timeout = 1000 # Milliseconds before fade_on_empty is triggered.
-    placeholder_text = <span foreground="##a6adc8">󰌾  Logged in as <span foreground="##B4bEFE"><i>$USER</i></span></span>
-    placeholder_color = rgb(180, 190, 254)
+    font_family = SF Pro Display Bold
+    placeholder_text = <i><span foreground="##ffffff99">🔒 Enter Pass</span></i>
     hide_input = false
-    rounding = 15 # -1 means complete rounding (circle/oval)
-    check_color = rgb(243, 139, 168)
-    fail_color = rgb(243, 139, 168) # if authentication failed, changes outer_color and fail message color
-    fail_text = <i>$FAIL <b>($ATTEMPTS)</b></i> # can be set to empty
-    fail_transition = 300 # transition time in ms between normal outer_color and fail_color
-    capslock_color = -1
-    numlock_color = -1
-    bothlock_color = -1 # when both locks are active. -1 means don't change outer color (same for above)
-    invert_numlock = false # change color if numlock is off
-    swap_font_color = false # see below
-
-    position = 0, 0
+    position = 0, -210
     halign = center
     valign = center
 }
 
+# CURRENT SONG
 label {
     monitor =
-    text = cmd[update:1000] echo "$(date +%H:%M)"
-    color = rgb(205, 214, 244)
-    font_size = 64
-    font_family = JetBrainsMono NF Medium
-
-    position = 0, 200
-    halign = center
-    valign = center
-}
-
-label {
-    monitor =
-    text = cmd[update:1000] "/home/$USER/.local/scripts/get-media.sh"
-    font_size = 10
-    color = rgba(200, 200, 200, 1.0)
-    font_family = JetBrainsMono NF Medium
+    text = cmd[update:1000] echo "$(~/.config/hypr/scripts/songdetail.sh)" 
+    color = rgba(255, 255, 255, 0.6)
+    font_size = 18
+    font_family = JetBrains Mono Nerd, SF Pro Display Bold
     position = 0, 50
+    halign = center
     valign = bottom
-    halign = center
-}
-
-label {
-    monitor =
-    text = $LAYOUT
-    font_size = 10
-    color = rgba(200, 200, 200, 1.0)
-    font_family = JetBrainsMono NF Medium
-    position = 0, -60
-    valign = center
-    halign = center
 }
