--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -37,8 +37,8 @@ input {
 general {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
 
-    gaps_in = 4
-    gaps_out = 10
+    gaps_in = 2
+    gaps_out = 15
     border_size = 2
     #col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
     col.active_border = rgba(c0caf5ff)
@@ -51,10 +51,10 @@ general {
 decoration {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
 
-    rounding = 1
+    rounding = 0
 
     blur {
-        enabled = true
+        enabled = false
         size = 4
         passes = 4
     }
@@ -169,7 +169,7 @@ bind = , XF86audiostop, exec, playerctl stop
 bind = $mainMod SHIFT, Q, killactive
 bind = $mainMod, RETURN, exec, kitty
 bind = $mainMod SHIFT, E, exit,
-bind = SUPER, E, exec, nautilus
+bind = SUPER, E, exec, thunar
 bind = $mainMod, V, togglefloating,
 bind = $mainMod, D, exec, wofi --show drun
 bind = $mainMod SHIFT, RETURN, layoutmsg, swapwithmaster master
