--- a/.config/hypr/env.conf
+++ b/.config/hypr/env.conf
@@ -5,7 +5,10 @@ env = XDG_CURRENT_DESKTOP,Hyprland
 env = XDG_SESSION_DESKTOP,Hyprland
 env = XDG_SESSION_TYPE,wayland
 
+#env = AQ_DRM_DEVICES,/dev/dri/card1
+
 env = AQ_DRM_DEVICES,/dev/dri/card1:/dev/dri/card0
+
 
 # QT Variables
 env = QT_AUTO_SCREEN_SCALE_FACTOR,1
