--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,13 +1,27 @@
 # vim:ft=kitty
 
-confirm_os_window_close 0
 
+confirm_os_window_close 0
+background_blur 0
 font_family      FantasqueSansM Nerd Font
 bold_font        auto
 italic_font      auto
 bold_italic_font auto
 
 font_size 13
+
+enable_audio_bell no
+linux_display_server auto
+wayland_enable_ime yes
+
+
+## name:     Catppuccin Kitty Macchiato
+## author:   Catppuccin Org
+## license:  MIT
+## upstream: https://github.com/catppuccin/kitty/blob/main/themes/macchiato.conf
+## blurb:    Soothing pastel theme for the high-spirited!
+
+
 
 # The basic colors
 foreground              #cad3f5
@@ -79,7 +93,3 @@ color14 #8bd5ca
 # white
 color7  #b8c0e0
 color15 #a5adcb
-
-enable_audio_bell no
-linux_display_server auto
-wayland_enable_ime yes
