--- a/.config/waybar/config.jsonc
+++ b/.config/waybar/config.jsonc
@@ -1,18 +1,11 @@
 {
   "layer": "top",
-  "height": 40,
+  "height": 30,
   "reload_style_on_change": true,
-  "modules-left": [
-    "hyprland/workspaces",
-    "power-profiles-daemon",
-    "gamemode",
-    "privacy",
-  ],
-  "modules-center": ["clock"],
+  "modules-left": ["hyprland/workspaces", "power-profiles-daemon"],
+  "modules-center": ["clock", "privacy"],
   "modules-right": [
     "tray",
-    "cpu",
-    "memory",
     "battery",
     "pulseaudio",
     "backlight",
@@ -34,40 +27,19 @@
     },
   },
   "custom/updates": {
-    "exec": "bash $HOME/.config/waybar/scripts/checkupdate.sh", // <--- path to script
-    "on-click-right": "bash $HOME/.config/waybar/scripts/checkupdates.sh", // refresh on right click
-    "interval": 900, // refresh every 15 minutes
+    "exec": "bash $HOME/.config/waybar/scripts/checkupdate.sh",
+    "on-click-right": "bash $HOME/.config/waybar/scripts/checkupdates.sh",
+    "interval": 900,
     "return-type": "json",
     "format": "{icon}",
     "format-alt": "{icon} {}",
     "format-icons": {
-      "has-updates": "", // icon when updates needed
-      "updated": "", // icon when all packages updated
+      "has-updates": "",
+      "updated": "",
     },
   },
-  "bluetooth": {
-    "format": " {status}",
-    "format-connected": " {device_alias}",
-    "format-connected-battery": " {device_alias} {device_battery_percentage}%",
-    "tooltip-format": "{controller_alias}\t{controller_address}\n\n{num_connections} connected",
-    "tooltip-format-connected": "{controller_alias}\t{controller_address}\n\n{num_connections} connected\n\n{device_enumerate}",
-    "tooltip-format-enumerate-connected": "{device_alias}\t{device_address}",
-    "tooltip-format-enumerate-connected-battery": "{device_alias}\t{device_address}\t{device_battery_percentage}%",
-  },
-  "gamemode": {
-    "format": "{glyph}",
-    "format-alt": "{glyph} {count}",
-    "glyph": "",
-    "hide-not-running": true,
-    "use-icon": true,
-    "icon-name": "input-gaming-symbolic",
-    "icon-spacing": 4,
-    "icon-size": 20,
-    "tooltip": true,
-    "tooltip-format": "Games running: {count}",
-  },
   "privacy": {
-    "icon-spacing": 4,
+    "icon-spacing": 2,
     "icon-size": 12,
     "transition-duration": 250,
     "modules": [
@@ -89,7 +61,7 @@
     "tooltip-format": "<tt><small>{calendar}</small></tt>",
     "timezones": "Europe/Prague",
     "calendar": {
-      "mode": "year",
+      "mode": "month",
       "weeks-pos": "right",
       "mode-mon-col": 3,
       "on-scroll": 1,
@@ -131,7 +103,7 @@
       "critical": 15,
     },
     "format": "{icon} {capacity}%",
-    "format-full": " 󱟢 {capacity}%",
+    "format-full": "󱟢 {capacity}%",
     "format-icons": {
       "discharging": ["󰁺", "󰁻", "󰁼", "󰁽", "󰁾", "󰁿", "󰂀", "󰂁", "󰂂", "󰁹"],
       "charging": ["󰢜", "󰂆", "󰂇", "󰂈", "󰢝", "󰂉", "󰢞", "󰂊", "󰂋", "󰂅"],
@@ -139,7 +111,7 @@
     },
   },
   "pulseaudio": {
-    "format": "{icon} {volume}% {format_source}",
+    "format": "{icon} {volume}%",
     "format-bluetooth": "{volume}% {icon}",
     "format-muted": "󰖁 0% {format_source}",
     "format-icons": {
@@ -154,8 +126,6 @@
     "scroll-step": 5,
     "on-click": "pavucontrol",
     "ignored-sinks": ["Easy Effects Sink"],
-    "format-source": " {volume}%",
-    "format-source-muted": " {volume}%",
   },
   "backlight": {
     "format": "{percent}% {icon}",
