--- a/.gitignore
+++ b/.gitignore
@@ -34,6 +34,10 @@ Videos/
 go/
 
 ## .config ignore files
+.config/Thunar/
+.config/eww/
+.config/xfce4/
+.config/Raspberry Pi/
 .config/libreoffice/
 .config/obs-studio/
 .config/vlc/
