--- a/.config/hypr/windowrules.conf
+++ b/.config/hypr/windowrules.conf
@@ -154,3 +154,9 @@ windowrule = float, class:bruno
 
 # Workspaces
 windowrule = workspace 2 silent, class:discord
+
+
+# Kitty
+windowrule = opacity 0.7 override 0.7 override, class:^(kitty)$
+windowrule = opacity 0.7 override 0.7 override, class:^(com.mitchellh.ghostty)$
+windowrule = opacity 1 override 1 override, class:^(kitty)$,title:^(nvim)$
