--- a/.gitignore
+++ b/.gitignore
@@ -35,7 +35,7 @@ go/
 
 ## .config ignore files
 .config/Thunar/
-.config/eww/
+#.config/eww
 .config/xfce4/
 .config/Raspberry Pi/
 .config/libreoffice/
